Fix switching nested chats flickering

--- a/src/scss/partials/_chat.scss
+++ b/src/scss/partials/_chat.scss
@@ -649,45 +649,53 @@ $time-margin-left: math.div($message-padding-horizontal, -2) + 1px;
 		filter: brightness(.8);
 	}
 
-	@include respond-to(no-floating-left-sidebar) {
-		&:not(.active) {
-			transform: translate3d(calc((100vw - min(calc(100vw * .4), 420px)) * -.25), 0, 0);
+  &:not(.active) {
+    transform: translate3d(calc(min(#{$large-screen / 4}, 25vw) * -1), 0, 0);
 
-			&:last-child { // * 420px - max left sidebar width, .4 - left sidebar width percents
-				transform: translate3d(calc(100vw - min(calc(100vw * .4), 420px)), 0, 0);
-			}
-		}
-	}
+    &:last-child {
+      transform: translate3d(100%, 0, 0);
+    }
+  }
 
-	@include respond-to(large-screens) {
-		&:not(.active) {
-			transform: translate3d(calc((#{$large-screen} - var(--right-column-width)) * -.25), 0, 0);
+	// @include respond-to(no-floating-left-sidebar) {
+	// 	&:not(.active) {
+	// 		transform: translate3d(calc((100vw - min(calc(100vw * .4), 420px)) * -.25), 0, 0);
 
-			&:last-child {
-				transform: translate3d(calc(#{$large-screen} - var(--right-column-width)), 0, 0);
-			}
-		}
-	}
+	// 		&:last-child { // * 420px - max left sidebar width, .4 - left sidebar width percents
+	// 			transform: translate3d(calc(100vw - min(calc(100vw * .4), 420px)), 0, 0);
+	// 		}
+	// 	}
+	// }
+
+	// @include respond-to(large-screens) {
+	// 	&:not(.active) {
+	// 		transform: translate3d(calc((#{$large-screen} - var(--right-column-width)) * -.25), 0, 0);
+
+	// 		&:last-child {
+	// 			transform: translate3d(calc(#{$large-screen} - var(--right-column-width)), 0, 0);
+	// 		}
+	// 	}
+	// }
 	
-	@include respond-to(only-medium-screens) {
-		&:not(.active) {
-			transform: translate3d(-25vw, 0, 0);
+	// @include respond-to(only-medium-screens) {
+	// 	&:not(.active) {
+	// 		transform: translate3d(-25vw, 0, 0);
 
-			&:last-child {
-				transform: translate3d(75vw, 0, 0);
-			}
-		}
-	}
+	// 		&:last-child {
+	// 			transform: translate3d(75vw, 0, 0);
+	// 		}
+	// 	}
+	// }
 
-	@include respond-to(until-floating-left-sidebar) {
-		&:not(.active) {
-			transform: translate3d(-25vw, 0, 0);
+	// @include respond-to(until-floating-left-sidebar) {
+	// 	&:not(.active) {
+	// 		transform: translate3d(-25vw, 0, 0);
 
-			&:last-child {
-				transform: translate3d(100vw, 0, 0);
-			}
-		}
-	}
+	// 		&:last-child {
+	// 			transform: translate3d(100vw, 0, 0);
+	// 		}
+	// 	}
+	// }
 
 	&-background {
 		overflow: hidden;
